--- a/index.html
+++ b/index.html
@@ -812,7 +812,7 @@ border: solid 2px;
 
 
 <footer>
-  <p>Author: HernandezGarcia, Jorge
+  <p>Created by: HernandezGarcia, Jorge
   <br><a href="mailto:jorge.hernandezgarcia.mil@mail.mil">jorge.hernandezgarcia.mil@mail.mil</a>
   
   </p>
