--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ border: solid 2px;
     <summary><label for="smUnitPrev">Prev. Unit:</label>
     <input list="armyUnits" id="smUnitPrev">
     </summary>
-    <p>If you know the Company and Battallion, typ them. Otherwise, just type the Instalation (Fort).</p>
+    <p>If you know the Company and Battallion, type them. Otherwise, just type the Instalation (Fort).</p>
   </details>
   
   <details>
@@ -407,11 +407,13 @@ border: solid 2px;
   <label for="smFRG">FRG:</label>
   <input list="YN" id="smFRG">
   <br>
+  <br>
   <label for="smPOBCity">Place of Birth (PoB) City:</label>
   <input type="text" id="smPOBCity">
   <br>
   <label for="smPOBState">PoB State/Country:</label>
   <input type="text" id="smPOBState">
+  <br>
   <br>
   <label for="smHORAddress">Home of Record (HoR) Street:</label>
   <input type="text" id="smHORAddress">
@@ -424,6 +426,7 @@ border: solid 2px;
   <br>
   <label for="smHORZip">HoR Zip:</label>
   <input type="number" id="smHORZip">
+  <br>
   <br>
   <label for="smLOCAddress">Local Street:</label>
   <input type="text" id="smLOCAddress">
