--- a/index.html
+++ b/index.html
@@ -817,6 +817,8 @@ border: solid 2px;
 <br><label>Co CQ Phone: </label><a href="tel:520-533-0906">520-533-0906</a>
 <br><label>Co Email: </label><a href="mailto:usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil">usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil</a>
 
+<br><br><a href="https://drive.google.com/file/d/1TkP0wKJRUym7UvTtjI08tS0lMx4WHjbs/view?usp=sharing">CQ Roster</a>
+
 
 </details>
 
