--- a/index.html
+++ b/index.html
@@ -763,11 +763,11 @@ border: solid 2px;
 <p>Send your JSON file to: 
   <a href="javascript:(function()%7BemailSend()%3B%7D)()%3B">Hold Company Email</a>
 </p>
+<details><summary>iPhone users</summary>
+  <p>If when you click on 'Download JSON' a new pages opens with your information coded, copy all of it, go back to the previous page, click on 'Send your JSON file...' and paste the contents of the information coded to the body of the email.</p>
+</details>
 
-
-  <br>
-
-  <br><br>
+<br><br><br>
 
 
 <details open><summary>More Info</summary>
@@ -818,8 +818,10 @@ border: solid 2px;
 <br><label>Co Email: </label><a href="mailto:usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil">usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil</a>
 
 <br><br><a href="https://drive.google.com/file/d/1TkP0wKJRUym7UvTtjI08tS0lMx4WHjbs/view?usp=sharing">CQ Roster</a>
+<br><a href="https://drive.google.com/file/d/1cxJZJdY__zD-8vRS9M1fuRBmPB7D7ao1/view?usp=sharing">Hold Co SOP - Barracks</a>
+<br><a href="https://drive.google.com/file/d/1DAy1kV1NgVoiy0jbYNqO1l3aqXZpdFWd/view?usp=sharing">Hold Co SOP - Company</a>
 
-
+<br>
 </details>
 
 <footer>
