--- a/index.html
+++ b/index.html
@@ -741,7 +741,44 @@ border: solid 2px;
   <br>
   <br>
   
+<fieldset><legend>Find:</legend>
+  <details>
+    <summary>DA31 - Request and Authority for Leave</summary>
+    <p>Look in the top center or the bottom left of your documents. They might be with your itinerary.</p>
+  </details>
+  <details>
+    <summary>Orders</summary>
+    <p>Look in the left side of your documents. It would say ORDERS followed by some numbers. Usually between 2 to 4 pages.</p>
+    <p>Also, look in the back, they usually end with an office seal/stamp.</p>
+  </details>
+  <details>
+    <summary>Reserve/NG: State Orders</summary>
+    <p>Also known as Title 10 orders. Should be the ones sending you to basic (and maybe to AIT).</p>
+  </details>
+  <details>
+    <summary>If you were promoted in BCT, DA4187 - Personnel Action</summary>
+    <p>Look in the top center or the bottom left of your documents. It should say, Promoted or Advanced to whatever rank you have.</p>
+  </details>
+</fieldset>
 
+<fieldset><legend>Contraband:</legend>
+  <p>Any non-military issue clothing/Civilian clothing/BCT T-Shirt, hoodie, etc.</p>
+  <p>Any electronics, NOT including/except smart watch and phone.</p>
+</fieldset>
+
+<fieldset><legend>Abbreviations:</legend>
+  <dl>
+    <dt>PoB</dt>
+    <dd>Place of Birth.</dd>
+    <dt>HoR</dt>
+    <dd>Home of Record - The address you were living before joining the Army.</dd>
+
+    <dt>EFMP</dt>
+    <dd>Exceptional Family Member Program.</dd>
+    <dt>NoK</dt>
+    <dd>Next of Kin - Someone you would like us to contact in case of an emergency.</dd>
+  </dl>
+</fieldset>
   
   </details>
 </fieldset>
@@ -764,56 +801,14 @@ border: solid 2px;
   <a href="javascript:(function()%7BemailSend()%3B%7D)()%3B">Hold Company Email</a>
 </p>
 <details><summary>iPhone users</summary>
-  <p>If when you click on 'Download JSON' a new pages opens with your information coded, copy all of it, go back to the previous page, click on 'Send your JSON file...' and paste the contents of the information coded to the body of the email.</p>
+  <p>If when you click on 'Download JSON' a new page opens with your information coded, copy all of it, go back to the previous page, click on 'Send your JSON file...' and paste the contents of the information coded to the body of the email.</p>
 </details>
 
 <br><br><br>
 
 
 <details open><summary>More Info</summary>
-<fieldset>
-  <legend>Find:</legend>
-  <details>
-    <summary>DA31 - Request and Authority for Leave</summary>
-    <p>Look in the top center or the bottom left of your documents. They might be with your itinerary.</p>
-  </details>
-  <details>
-    <summary>Orders</summary>
-    <p>Look in the left side of your documents. It would say ORDERS followed by some numbers. Usually between 2 to 4 pages.</p>
-    <p>Also, look in the back, they usually end with an office seal/stamp.</p>
-  </details>
-  <details>
-    <summary>Reserve/NG: State Orders</summary>
-    <p>Also known as Title 10 orders. Should be the ones sending you to basic (and maybe to AIT).</p>
-  </details>
-  <details>
-    <summary>If you were promoted in BCT, DA4187 - Personnel Action</summary>
-    <p>Look in the top center or the bottom left of your documents. It should say, Promoted or Advanced to whatever rank you have.</p>
-  </details>
-</fieldset>
-
-<fieldset>
-  <legend>Contraband:</legend>
-  <p>Any non-military issue clothing/Civilian clothing/BCT T-Shirt, hoodie, etc.</p>
-  <p>Any electronics, NOT including/except smart watch and phone.</p>
-</fieldset>
-
-<fieldset>
-  <legend>Abbreviations:</legend>
-  <dl>
-    <dt>PoB</dt>
-    <dd>Place of Birth.</dd>
-    <dt>HoR</dt>
-    <dd>Home of Record - The address you were living before joining the Army.</dd>
-
-    <dt>EFMP</dt>
-    <dd>Exceptional Family Member Program.</dd>
-    <dt>NoK</dt>
-    <dd>Next of Kin - Someone you would like us to contact in case of an emergency.</dd>
-  </dl>
-</fieldset>
-
-<br><label>Discord - Hold Under student group: </label><a href="https://discord.gg/wTem24TpZP">https://discord.gg/wTem24TpZP</a>
+<label>Discord - Hold Under student group: </label><a href="https://discord.gg/wTem24TpZP">https://discord.gg/wTem24TpZP</a>
 <br><label>Co CQ Phone: </label><a href="tel:520-533-0906">520-533-0906</a>
 <br><label>Co Email: </label><a href="mailto:usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil">usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil</a>
 
