--- a/index.html
+++ b/index.html
@@ -813,18 +813,34 @@ border: solid 2px;
 <br><br>
 
 
-<details open><summary>More Info</summary>
-<label>Discord - Hold Under student group: </label><a href="https://discord.gg/wTem24TpZP">https://discord.gg/wTem24TpZP</a>
+<details open><summary>Hold Company Info</summary>
+
 <br><label>Co CQ Phone: </label><a href="tel:520-533-0906">520-533-0906</a>
 <br><label>Co Email: </label><a href="mailto:usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil">usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil</a>
-
-<br><br><a href="https://drive.google.com/file/d/1TkP0wKJRUym7UvTtjI08tS0lMx4WHjbs/view?usp=sharing">CQ Roster</a>
+<br><label>Discord - Hold Under student group: </label><a href="https://discord.gg/wTem24TpZP">https://discord.gg/wTem24TpZP</a>
+<br>
+<br><a href="https://drive.google.com/file/d/1TkP0wKJRUym7UvTtjI08tS0lMx4WHjbs/view?usp=sharing">CQ Roster</a>
+<br>
 <br><a href="https://drive.google.com/file/d/1cxJZJdY__zD-8vRS9M1fuRBmPB7D7ao1/view?usp=sharing">Hold Co SOP - Barracks</a>
 <br><a href="https://drive.google.com/file/d/1DAy1kV1NgVoiy0jbYNqO1l3aqXZpdFWd/view?usp=sharing">Hold Co SOP - Company</a>
 
 <br>
 </details>
+<br>
+<details open><summary>Ft. Huachuca</summary>
+<br>
+<details><summary>35T</summary>
+<label>CQ Phone: </label><a href="tel:520-533-6401">520-533-6401</a>
+<br><label>Co Email: </label><a href="mailto:charlie309th@gmail.com">charlie309th@gmail.com</a>
+<br><a href="https://www.facebook.com/ComancheCompany309th">C Co, 309th Facebook page</a>
+</details>
 
+
+<br><a href="https://www.facebook.com/groups/529117777235614">Fort Huachuca AIT Support Group</a>
+
+</details>
+
+<br><br>
 <footer>
   <p>Created by: HernandezGarcia, Jorge
   <br><a href="mailto:jorge.hernandezgarcia.mil@mail.mil">jorge.hernandezgarcia.mil@mail.mil</a>
