--- a/index.html
+++ b/index.html
@@ -811,8 +811,21 @@ border: solid 2px;
 
 
 <br><br>
+<details><summary>Do's & Dont's</summary>
+<fieldset><legend>Do's</legend>
+<ul>
+    <li>You might go to the shoppette or order food after 1830 on duty days.</li>
+    <li>You might go to the post office or dry cleaners during the duty day with permission from the DS.</li>
+</ul>
+</fieldset>
+<fieldset><legend>Dont's</legend>
+
+</fieldset>
+</details>
 
 
+
+<br>
 <details open><summary>Hold Company Info</summary>
 
 <br><label>Co CQ Phone: </label><a href="tel:520-533-0906">520-533-0906</a>
