--- a/index.html
+++ b/index.html
@@ -870,9 +870,9 @@ Uniform: ACU (OCP), with In-Processing packet, BCT Packet, 10x copies of orders,
 
 
 <br>
-<details open><summary>Hold Company Info</summary>
+<fieldset><details open><summary>Hold Company Info</summary>
 
-<br><label>Co CQ Phone: </label><a href="tel:520-533-0906">520-533-0906</a>
+<br><a href="tel:520-533-0906">520-533-0906</a><label> - Co CQ Phone</label>
 <br><label>Co Email: </label><a href="mailto:usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil">usarmy.huachuca.icoe.list.111th-hold-co-drill-sergeants@mail.mil</a>
 <br>
 <br><label>Discord - Hold Under student group: </label><a href="https://discord.gg/wTem24TpZP">https://discord.gg/wTem24TpZP</a>
@@ -883,7 +883,7 @@ Uniform: ACU (OCP), with In-Processing packet, BCT Packet, 10x copies of orders,
 <br><a href="https://drive.google.com/file/d/1DAy1kV1NgVoiy0jbYNqO1l3aqXZpdFWd/view?usp=sharing">Hold Co SOP - Company</a>
 
 <br>
-</details>
+</details></fieldset>
 <br>
 <details open><summary>Ft. Huachuca</summary>
 <br>
