--- a/index.html
+++ b/index.html
@@ -941,9 +941,12 @@ Ride:
 520-439-0439 - Huachuca Shuttle
 520-300-0000 - Yellow Cab Tucson
 520-458-3330 - AZ World Shuttle
-SHARP (24/7):
-1-877-995-5247 - DoD Safe Helpline
-520-732-3736 - Ft. Huachuca SH/SA Hotline 520-538-5971 - Garrison SARC/SHARP
+
+<br>SHARP
+<br><a href="tel:1-877-995-5247">1-877-995-5247</a><label> - DoD Safe Helpline (24/7)</label>
+<br><a href="tel:520-732-3736">520-732-3736</a><label> - Ft. Huachuca SH/SA Hotline (24/7)</label> 
+
+520-538-5971 - Garrison SARC/SHARP
 Facilities:
 520-533-1608 - DEERS
 520-533-4723 - Eifler Gym
