--- a/index.html
+++ b/index.html
@@ -915,14 +915,32 @@ Medical:
 <br><a href="tel:520-533-6709">520-533-6709</a><label> - MISC</label>
 <br><a href="tel:520-533-5970">520-533-5970</a><label> - MISC</label>
 <br><a href="tel:520-538-0043">520-538-0043</a><label> - MISC</label>: M-F 0430-1400
+<br><a href="https://maps.google.com/maps?q=31.564339,-110.341770">https://maps.google.com/maps?q=31.564339,-110.341770</a>
 <br>
+
 
 <br><a href="tel:520-533-9165">520-533-9165</a><label> - WAC</label>: Sat 0700-1600
 <br>
-520-533-2627 / 9200 - RW Bliss
-520-533-9102 / 9236 - Physical Therapy
-520-533-1492 / 3147 // 520-481-7219 - Dental 520-227-5563 - Dental CQ (after hours)
-520-533-9197 - Optometry: M-W, F 0700-1600 520-533-5311 - AWC
+
+<br><a href="tel:520-533-2627">520-533-2627</a><label> - RW Bliss</label>
+<br><a href="tel:520-533-9200">520-533-9200</a><label> - RW Bliss</label>
+
+<br><a href="tel:520-533-9102">520-533-9102</a><label> - Physical Therapy</label>
+<br><a href="tel:520-533-9236">520-533-9236</a><label> - Physical Therapy</label>
+
+<br>
+<br><a href="tel:520-533-1492">520-533-1492</a><label> - Dental</label>
+<br><a href="tel:520-533-3147">520-533-3147</a><label> - Dental</label>
+<br><a href="tel:520-481-7219">520-481-7219</a><label> - Dental</label>
+
+<br><a href="tel:520-227-5563">520-227-5563</a><label> - Dental CQ (after hours)</label>
+
+<br>
+<br><a href="tel:520-533-9197">520-533-9197</a><label> - Optometry</label>: M-W, F 0700-1600 
+<br>You can do a walk-in at the MISC.
+<br>
+
+520-533-5311 - AWC
 Counseling:
 520-533-5161 - Behavioral Health
 808-291-7882 - Chaplain (Confidential) (CPT Gaskin) 520-533-2291 / 8774 - On-Call Chaplain (Confidential) 
@@ -946,6 +964,8 @@ Ride:
 <br><a href="tel:1-877-995-5247">1-877-995-5247</a><label> - DoD Safe Helpline (24/7)</label>
 <br><a href="tel:520-732-3736">520-732-3736</a><label> - Ft. Huachuca SH/SA Hotline (24/7)</label> 
 <br><a href="tel:520-538-5971">520-538-5971</a><label> - Garrison SARC/SHARP</label>
+
+<br><br>Give the DS a heads up (for accountability purposes, you don't need to disclose the reason), that you want to talk with the SARC or VA 
 <br><br>111th MI BDE SARC - SFC Pennington, Saquawia V.
 <br><a href="tel:520-533-4448">520-533-4448</a><label> - Office</label>
 <br><a href="tel:520-220-6380">520-220-6380</a><label> - Duty Cell</label>
@@ -1001,9 +1021,6 @@ https://maps.google.com/maps?q=31.548841,-110.352132
 
 Bliss (specialty clinics):
 https://maps.google.com/maps?q=31.549320,-110.352721
-
-MISC:
-https://maps.google.com/maps?q=31.564339,-110.341770
 
 Ed center:
 https://maps.google.com/maps?q=31.559215,-110.352962
