--- a/index.html
+++ b/index.html
@@ -1012,6 +1012,13 @@ Whitside Rd
 <br><a href="tel:520-533-">520-533-</a><label> - </label>
 
 
+Chapel Service
+Sunday mass - 0900 - 
+
+
+
+
+
 
 CIF:
 https://maps.google.com/maps?q=31.563130,-110.313962
