--- a/index.html
+++ b/index.html
@@ -1013,10 +1013,24 @@ Whitside Rd
 
 
 Chapel Service
-Sunday mass - 0900 - 
+0900 - Sunday - Main Post Chapel - Sunday mass
 
+Confessions by Appointment (1015-1200) - Blessed Sacrament Chapel 
 
+LDS Latter-Day Saints
+1300 - Sunday - Prosser Village Chapel Annex
 
+Jewish
+0800 - Every other Sunday - Prosser Chapel
+
+Norse Pagan
+1230 - Saturday - Prosser Chapel
+
+0930 - Sunday - Kino Chapel - Protestant Gospel/Worship  Service
+
+0930 - Sunday - 305th MI BN Classroom - General Protestant, Contemporary AIT Service
+
+1100 - Sunday - Main Post Chapel - Protestant Service
 
 
 
