--- a/index.html
+++ b/index.html
@@ -980,7 +980,11 @@ Facilities:
 520-533-1608 - DEERS
 520-533-4723 - Eifler Gym
 520-732-6933 - Ed Center
-520-533-1144 - IG
+520-533-1144 - IG (Inspector General)
+Violations of Regulations/Policy
+reach to the agencies to get the right processes (tonget BAH, FSA, correct pay, etc)
+entitlements, reprisal
+
 520-533-2009 / 3208 - JAG
 520-538-5762 / 2982 - Finance
 520-533-2330 / 5719 // 520-538-5768 - ACS
@@ -1013,24 +1017,36 @@ Whitside Rd
 
 
 Chapel Service
+Confessions by Appointment 
+
+1215 - Friday - Mail Post Chapel, Room 24 - Muslim
+
+1830 - Friday - Prosser Chapel - Hospitality House
+
+
+1230 - Saturday - Prosser Chapel - Norse Pagan
+
+
+0800 - Every other Sunday - Prosser Chapel - Jewish
+
 0900 - Sunday - Main Post Chapel - Sunday mass
-
-Confessions by Appointment (1015-1200) - Blessed Sacrament Chapel 
-
-LDS Latter-Day Saints
-1300 - Sunday - Prosser Village Chapel Annex
-
-Jewish
-0800 - Every other Sunday - Prosser Chapel
-
-Norse Pagan
-1230 - Saturday - Prosser Chapel
 
 0930 - Sunday - Kino Chapel - Protestant Gospel/Worship  Service
 
 0930 - Sunday - 305th MI BN Classroom - General Protestant, Contemporary AIT Service
 
+1015-1200 - Sunday - Blessed Sacrament Chapel (Annex at Main Post Chapel) - Individual Prayer
+
 1100 - Sunday - Main Post Chapel - Protestant Service
+
+1300 - Sunday - Prosser Village Chapel Annex - Latter-Day Saints (LDS)
+
+
+
+
+
+
+
 
 
 
