--- a/index.html
+++ b/index.html
@@ -976,10 +976,15 @@ Ride:
 <br><a href="mailto:anthony.b.feige.mil@mail.mil">anthony.b.feige.mil@mail.mil</a>
 <br>
 
-Facilities:
-520-533-1608 - DEERS
-520-533-4723 - Eifler Gym
-520-732-6933 - Ed Center
+<br><br>Facilities:
+<br><a href="tel:520-533-1608">520-533-1608</a><label> - DEERS</label>
+<br><a href="tel:520-533-4723">520-533-4723</a><label> - Eifler Gym</label>
+<br><a href="tel:520-732-6933">520-732-6933</a><label> - Ed Center</label>
+<br><a href="tel:520-533-1144">520-533-1144</a><label> - IG (Inspector General)</label>: M,Tu,W,F: 0830-1630; Th: 1330-1630
+<br><a href="mailto:usarmy.huachuca.icoe.mbx.inspector-general@mail.mil">usarmy.huachuca.icoe.mbx.inspector-general@mail.mil</a>
+<br><a href="https://www.ikn.army.mil/apps/IKNHostedWebsites/IG">IG Website</a>
+
+
 520-533-1144 - IG (Inspector General)
 Violations of Regulations/Policy
 reach to the agencies to get the right processes (tonget BAH, FSA, correct pay, etc)
@@ -1008,6 +1013,8 @@ Law:
 1-866-780-9758 - Alcoholic Anonymous Stein St Warrior Sentinel Field
 520-459-0031 - Alcoholic Anonymous Cochise County Krueger Track
 520-538-1311 / 1315 - Substance Abuse (ASAP)
+
+
 Eifler Gym > < Shoppette
 < Bissel St
 Chapel Annex > < C Co (You are here)
@@ -1017,7 +1024,7 @@ Whitside Rd
 
 
 Chapel Service
-Confessions by Appointment 
+Confessions: by Appointment 
 
 1215 - Friday - Mail Post Chapel, Room 24 - Muslim
 
