--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@ Medical:
 
 <br><a href="tel:520-533-2627">520-533-2627</a><label> - RW Bliss</label>
 <br><a href="tel:520-533-9200">520-533-9200</a><label> - RW Bliss</label>
-
+<br>
 <br><a href="tel:520-533-9102">520-533-9102</a><label> - Physical Therapy</label>
 <br><a href="tel:520-533-9236">520-533-9236</a><label> - Physical Therapy</label>
 
@@ -939,13 +939,30 @@ Medical:
 <br><a href="tel:520-533-9197">520-533-9197</a><label> - Optometry</label>: M-W, F 0700-1600 
 <br>You can do a walk-in at the MISC.
 <br>
+<br><a href="tel:520-533-5311">520-533-5311</a><label> - AWC</label>
+<br>
 
-520-533-5311 - AWC
-Counseling:
-520-533-5161 - Behavioral Health
+<br>Counseling:
+<br><a href="tel:520-533-5161">520-533-5161</a><label> - Behavioral Health (BH)</label>
+
 808-291-7882 - Chaplain (Confidential) (CPT Gaskin) 520-533-2291 / 8774 - On-Call Chaplain (Confidential) 
-Family:
-520-515-9000 // 520-533-3083 - Housing www.mountainvistacommunities.com 520-533-2207 / 5631 / 5427 - Transportation 520-533-6871 - Exceptional Fam. Member (EFMP) 520-533-2767 - Veterinary
+
+
+
+<br>Family:
+<br><a href="tel:520-515-9000">520-515-9000</a><label> - Housing</label>
+<br><a href="tel:520-533-3083">520-533-3083</a><label> - Housing</label>
+<br><a href="https://www.mountainvistacommunities.com">https://www.mountainvistacommunities.com</a><label> - Housing Website</label>
+
+<br><br>Transportation:
+<br><a href="tel:520-533-2207">520-533-2207</a>
+<br><a href="tel:520-533-5631">520-533-5631</a>
+<br><a href="tel:520-533-5427">520-533-5427</a>
+
+<br>
+<br><a href="tel:520-533-6871">520-533-6871</a><label> - Exceptional Family Member Program</label>
+
+520-533-6871 - Exceptional Fam. Member (EFMP) 520-533-2767 - Veterinary
 520-678-8112 - Ecology (wildlife)
 520-538-6319 - CYS (Childcare)
 520-538-8649 - Family Action Plan (AFAP) 520-538-5899 - Employment Readiness Program (ERP) 520-533-5919 - Relocation
