--- a/index.html
+++ b/index.html
@@ -997,15 +997,16 @@ Ride:
 <br><a href="tel:520-533-1608">520-533-1608</a><label> - DEERS</label>
 <br><a href="tel:520-533-4723">520-533-4723</a><label> - Eifler Gym</label>
 <br><a href="tel:520-732-6933">520-732-6933</a><label> - Ed Center</label>
-<br><a href="tel:520-533-1144">520-533-1144</a><label> - IG (Inspector General)</label>: M,Tu,W,F: 0830-1630; Th: 1330-1630
+
+<br><br><a href="tel:520-533-1144">520-533-1144</a><label> - IG (Inspector General)</label>: M,Tu,W,F: 0830-1630; Th: 1330-1630
 <br><a href="mailto:usarmy.huachuca.icoe.mbx.inspector-general@mail.mil">usarmy.huachuca.icoe.mbx.inspector-general@mail.mil</a>
 <br><a href="https://www.ikn.army.mil/apps/IKNHostedWebsites/IG">IG Website</a>
+<br>Violations of Regulations/Policy,
+<br>reach to the agencies to get the right processes (to get BAH, FSA, correct pay, etc),
+<br>entitlements, reprisal
 
 
-520-533-1144 - IG (Inspector General)
-Violations of Regulations/Policy
-reach to the agencies to get the right processes (tonget BAH, FSA, correct pay, etc)
-entitlements, reprisal
+<br><br>
 
 520-533-2009 / 3208 - JAG
 520-538-5762 / 2982 - Finance
