--- a/index.html
+++ b/index.html
@@ -1008,14 +1008,30 @@ Ride:
 
 <br><br>
 
-520-533-2009 / 3208 - JAG
-520-538-5762 / 2982 - Finance
-520-533-2330 / 5719 // 520-538-5768 - ACS
-520-533-5312 / 1-877-272-7337 - AER
-520-533-2967 - Financial Readiness Program
-520-538-8649 - Volunteer Corps (AVC)
-1-877-272-7337 - Red Cross Emergency
-Law:
+<br><a href="tel:520-533-2009">520-533-2009</a><label> - JAG</label>
+<br><a href="tel:520-533-3208">520-533-3208</a><label> - JAG</label>
+
+<br><a href="tel:520-538-5762">520-538-5762</a><label> - Finance</label>
+<br><a href="tel:520-538-2982">520-538-2982</a><label> - Finance</label>
+
+<br><br>ACS:
+<br><a href="tel:520-533-2330">520-533-2330</a>
+<br><a href="tel:520-533-5719">520-533-5719</a>
+<br><a href="tel:520-538-5768">520-538-5768</a>
+
+<br>
+<br><a href="tel:520-533-5312">520-533-5312</a><label> - AER</label>
+<br><a href="tel:1-877-272-7337">1-877-272-7337</a><label> - AER</label>
+
+<br>
+<br><a href="tel:520-533-2967">520-533-2967</a><label> - Financial Readiness Program</label>
+<br><a href="tel:520-538-8649">520-538-8649</a><label> - Army Volunteer Corps (AVC)</label>
+<br><a href="tel:1-877-272-7337">1-877-272-7337</a><label> - Red Cross - Emergencies</label>
+
+
+
+
+<br><br>Law:
 520-533-2291 - IOC (After hrs Emergencies)
 520-533-3000 - Military Police (MP)
 520-533-2628 - Criminal Investigation Division (CID) 520-508-2772 / 2993 - Domestic Violence
