--- a/index.html
+++ b/index.html
@@ -819,7 +819,10 @@ border: solid 2px;
 </ul>
 </fieldset>
 <fieldset><legend>Dont's</legend>
-
+<ul>
+    <li>Go anywhere without a battle buddy.</li>
+    <li>Throw away any Army issued item.</li>
+</ul>
 </fieldset>
 </details></fieldset>
 
@@ -827,43 +830,50 @@ border: solid 2px;
 <br>
 <fieldset><details open><summary>Info</summary>
 
-Sick Call (SC):
--Must have a new SC slip signed by DS
+<br>
+<br>Sick Call (SC):
+<br>-Must have a new SC slip signed by DS
 -Must sign out in ‘Sick Call Roster’ (including battle buddy), not on CQ Sign out/in roster
--Must turn in SC slip to DS
--Illness: NLT 0420 @ CQ desk  |  NLT 0430 @ MISC
--Injury:  NLT 0645 @ CQ desk  |  NLT 0700 @ MISC
+<br>-Must turn in SC slip to DS
+<br>-Illness: NLT 0420 @ CQ desk  |  NLT 0445 @ MISC
+<br>-Injury:  NLT 0420 @ CQ desk  |  NLT 0445 @ MISC
+<br>
+<br>Appointments:
+<br>-Must turn in to DS
+<br>
+<br>DS Office:
+<br>-Knock on the door (or plastic piece near the door)  and announce:
+<br>  [your Rank and  Name] with a battle buddy (you can say their name) requesting permission to speak with a DS. 
+<br>  Ex. Private Doe with specialist Smith requesting permission to speak with a drill sergeant.
 
-Appointments:
--Must turn in to DS
+<br>
+<br>Hold Co Moto: Nomads
+<br>Hold Co Response: Kill them all
+<br>309th BN Moto: Sentinels of Security
+<br>309th BN Response: Sentinel Pride!
+<br>C Co, 309th Moto: Maintain the Edge
+<br>C Co, 309th Response: Razor Sharp
 
-DS Office:
--Knock on the door and wait to be acknowledged
--Upon entering/leaving, announce: Shoppette
-“Students on/off the Floor”
+<br>
+<br>Mail Address: 
+<br>RANK Last, First
+<br>HOLD CO, 111TH MI BDE
+<br>FORT HUACHUCA, AZ 85613
 
-BN Moto: Sentinels of Security
-BN Response: Sentinel Pride!
-Company Moto: Maintain the Edge
-Company Response: Razor Sharp
+<br>
+<br>Weinstein DFAC: 
+<br>M-F: 0600-0730, 1130-1300, 1700-1830
+<br>Weekends/Holidays: 
 
+<br>
+<br>Bed check:
+<br>Su-Th: 2000
+<br>F-Sa: 2200
+<br>Uniform: Summer PTs with shower shoes Phase badge, Room key, CAC, and dog tags
 
-Mail Address: 
-RANK Last, First
-C CO, 309TH MI BN
-FORT HUACHUCA, AZ 85613
-
-Weinstein DFAC: 
-M-F: 0600-0730, 1130-1300, 1700-1830
-Weekends: 0600-0730, 1130-1300, 1700-1830
-
-Bed check:
-Su-Th: 2000 F-Sa: 2200
-Uniform: Summer PTs with shower shoes Phase badge, Room key, CAC, and dog tags
-
-
-In-Processing: Monday @ 0700 @ Eifler Gym // 0640 @ CQ desk or Drill Pad // Eat breakfast before you go there.
-Uniform: ACU (OCP), with In-Processing packet, BCT Packet, 10x copies of orders, 2x copies of DA31
+<br>
+<br>In-Processing: Monday @ 0700 @ Eifler Gym // Eat breakfast before you go there.
+<br>Uniform: ACU (OCP), with In-Processing packet, BCT Packet, 5x copies of orders, 2x copies of DA31
 </details></fieldset>
 
 
@@ -900,14 +910,12 @@ Uniform: ACU (OCP), with In-Processing packet, BCT Packet, 10x copies of orders,
 
 <br>
 
-Commissary: M-Closed, Tu-F-0900-1900,
-Sa-0900-1800, Su-1000-1700
-Clothing Sales: Su-M-Closed, Tu-F-0900-1800, Sa-0900-1600 
-Shoppette: M-Th-0600-2000, F-0600-2100, 
-Sa-0800-2030, Su-0900-1930
-USPS: Sa-Su-Closed, M-F-0830-1600
-520-533-6664 - C CO, CQ Phone
+<br>Commissary: M-Closed, Tu-F-0900-1900, Sa-0900-1800, Su-1000-1700
+<br>Clothing Sales: Su-M-Closed, Tu-F-0900-1800, Sa-0900-1600 
+<br>Shoppette: M-Th-0600-2000, F-0600-2100, Sa-0800-2030, Su-0900-1930
+<br>USPS: Sa-Su-Closed, M-F-0830-1600
 
+<br>
 <br><a href="tel:520-533-2997">520-533-2997</a><label> - COVID Hotline</label>
 <br><a href="tel:520-538-6969">520-538-6969</a><label> - iWATCH (Report suspicious activity)</label>
 <br>
@@ -960,22 +968,25 @@ Medical:
 <br><a href="tel:520-533-5427">520-533-5427</a>
 
 <br>
-<br><a href="tel:520-533-6871">520-533-6871</a><label> - Exceptional Family Member Program</label>
+<br><a href="tel:520-533-6871">520-533-6871</a><label> - Exceptional Family Member Program (EFMP)</label>
 
-520-533-6871 - Exceptional Fam. Member (EFMP) 520-533-2767 - Veterinary
-520-678-8112 - Ecology (wildlife)
-520-538-6319 - CYS (Childcare)
-520-538-8649 - Family Action Plan (AFAP) 520-538-5899 - Employment Readiness Program (ERP) 520-533-5919 - Relocation
-520-533-8961 - New Parent Support
-520-533-6878 - Family Advocacy
-520-533-3686 / 2330 - Social Worker
-Ride:
-520-775-2448 - Evelyn’s Taxi
-520-439-8294 - Two Tone Taxi
-520-249-4350 - Vibe Ryde
-520-439-0439 - Huachuca Shuttle
-520-300-0000 - Yellow Cab Tucson
-520-458-3330 - AZ World Shuttle
+<br>520-533-2767 - Veterinary
+<br>520-678-8112 - Ecology (wildlife)
+<br>520-538-6319 - CYS (Childcare)
+<br>520-538-8649 - Family Action Plan (AFAP)
+<br>520-538-5899 - Employment Readiness Program (ERP)
+<br>520-533-5919 - Relocation
+<br>520-533-8961 - New Parent Support
+<br>520-533-6878 - Family Advocacy
+<br>520-533-3686 / 2330 - Social Worker
+<br>
+<br>Ride:
+<br>520-775-2448 - Evelyn’s Taxi
+<br>520-439-8294 - Two Tone Taxi
+<br>520-249-4350 - Vibe Ryde
+<br>520-439-0439 - Huachuca Shuttle
+<br>520-300-0000 - Yellow Cab Tucson
+<br>520-458-3330 - AZ World Shuttle
 
 <br><br>SHARP
 <br><a href="tel:1-877-995-5247">1-877-995-5247</a><label> - DoD Safe Helpline (24/7)</label>
@@ -1031,59 +1042,56 @@ Ride:
 
 
 
-<br><br>Law:
-520-533-2291 - IOC (After hrs Emergencies)
-520-533-3000 - Military Police (MP)
-520-533-2628 - Criminal Investigation Division (CID) 520-508-2772 / 2993 - Domestic Violence
-1-800-273-8255 - National Domestic Violence 1-888-767-2445 - Child Protective Services
-520-533-1670 / 8895 520-255-5133 - 309th MI BN On-Call VA Hatfield St
-520-533-4748 / 1278
-520-255-4437 - Mil. Family Life Consultant < Weinstein DFAC
-520-678-7178   (MFLC) (Confidential) Arizona St
-1-800-273-8255 - Mil. Crisis Line - Text: 838255
-1-800-342-9647 - Military One Source (Confidential, 24/7) Hunt Rd
-1-800-464-8107 Old MISC >
-1-866-495-6735 - AZ Complete Health (24/7) - TTY: 711
-1-866-780-9758 - Alcoholic Anonymous Stein St Warrior Sentinel Field
-520-459-0031 - Alcoholic Anonymous Cochise County Krueger Track
-520-538-1311 / 1315 - Substance Abuse (ASAP)
+<br>
+<br>Law:
+<br>520-533-2291 - IOC (After hrs Emergencies)
+<br>520-533-3000 - Military Police (MP)
+<br>520-533-2628 - Criminal Investigation Division (CID)
+<br>520-508-2772 / 2993 - Domestic Violence
+<br>1-800-273-8255 - National Domestic Violence
+<br>1-888-767-2445 - Child Protective Services
+<br>520-533-1670 / 8895
+<br>520-255-5133 - 309th MI BN On-Call VA
+<br>520-533-4748 / 1278
+<br>520-255-4437 - Mil. Family Life Consultant
+<br>520-678-7178   (MFLC) (Confidential)
+<br>1-800-273-8255 - Mil. Crisis Line - Text: 838255
+<br>1-800-342-9647 - Military One Source (Confidential, 24/7)
+<br>1-800-464-8107
+<br>1-866-495-6735 - AZ Complete Health (24/7) - TTY: 711
+<br>1-866-780-9758 - Alcoholic Anonymous
+<br>520-459-0031 - Alcoholic Anonymous Cochise County
+<br>520-538-1311 / 1315 - Substance Abuse (ASAP)
 
-
-Eifler Gym > < Shoppette
-< Bissel St
-Chapel Annex > < C Co (You are here)
-Whitside Rd 
 
 <br><a href="tel:520-533-">520-533-</a><label> - </label>
 
 
-Chapel Service
-Confessions: by Appointment 
+<br>
+<br>Chapel Service
+<br>Confessions: by Appointment 
 
-1215 - Friday - Mail Post Chapel, Room 24 - Muslim
+<br>1215 - Friday - Mail Post Chapel, Room 24 - Muslim
 
-1830 - Friday - Prosser Chapel - Hospitality House
-
-
-1230 - Saturday - Prosser Chapel - Norse Pagan
+<br>1830 - Friday - Prosser Chapel - Hospitality House
 
 
-0800 - Every other Sunday - Prosser Chapel - Jewish
-
-0900 - Sunday - Main Post Chapel - Sunday mass
-
-0930 - Sunday - Kino Chapel - Protestant Gospel/Worship  Service
-
-0930 - Sunday - 305th MI BN Classroom - General Protestant, Contemporary AIT Service
-
-1015-1200 - Sunday - Blessed Sacrament Chapel (Annex at Main Post Chapel) - Individual Prayer
-
-1100 - Sunday - Main Post Chapel - Protestant Service
-
-1300 - Sunday - Prosser Village Chapel Annex - Latter-Day Saints (LDS)
+<br>1230 - Saturday - Prosser Chapel - Norse Pagan
 
 
+<br>0800 - Every other Sunday - Prosser Chapel - Jewish
 
+<br>0900 - Sunday - Main Post Chapel - Sunday mass
+
+<br>0930 - Sunday - Kino Chapel - Protestant Gospel/Worship  Service
+
+<br>0930 - Sunday - 305th MI BN Classroom - General Protestant, Contemporary AIT Service
+
+<br>1015-1200 - Sunday - Blessed Sacrament Chapel (Annex at Main Post Chapel) - Individual Prayer
+
+<br>1100 - Sunday - Main Post Chapel - Protestant Service
+
+<br>1300 - Sunday - Prosser Village Chapel Annex - Latter-Day Saints (LDS)
 
 
 
@@ -1091,7 +1099,10 @@ Confessions: by Appointment
 
 
 
-CIF:
+
+
+<br>
+<br>CIF:
 https://maps.google.com/maps?q=31.563130,-110.313962
 
 Bliss:
