--- a/index.html
+++ b/index.html
@@ -1003,6 +1003,8 @@ Medical:
 <br><a href="tel:520-732-3760">520-732-3760</a><label> - Duty Cell</label>
 <br><a href="mailto:anthony.b.feige.mil@mail.mil">anthony.b.feige.mil@mail.mil</a>
 <br>
+<br><a href="https://www.instagram.com/rapid_bde">https://www.instagram.com/rapid_bde</a>
+<br>
 
 <br><br>Facilities:
 <br><a href="tel:520-533-1608">520-533-1608</a><label> - DEERS</label>
